--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input[type="checkbox"] {
+  appearance: none;
+  -webkit-appearance: none;
+  height: 18px;
+  width: 18px;
+  background: transparent;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #9ABBCE;
+  outline: 0;
+}
+
+input[type="checkbox"]:after {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f00c';
+  font-size: 12px;
+  color: #2196F3;
+  display: none;
+}
+
+input[type="checkbox"]:checked {
+  border: 1px solid #2196F3;
+}
+
+input[type="checkbox"]:checked:after {
+  display: block;
+}
+
+.active {
+  background: #2196F3;
+  color: #FFFFFF;
 }
